{
    "name": "IS_InputHandler",
    "maps": [
        {
            "name": "AM_BuildAndDemolish",
            "id": "34333bbc-3b69-4c26-bf3d-e53147b46380",
            "actions": [
                {
                    "name": "Build",
                    "type": "Button",
                    "id": "062c76a4-b13d-408b-93a0-9976e9973c80",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Demolish",
                    "type": "Button",
                    "id": "addb0eab-bbcb-4596-96d3-8d3903cf34c3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4b5a2a75-028e-43dd-871f-8ea1e964abc9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Build",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0243af83-fe79-4b30-b14b-56666fbb3c20",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Demolish",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "AM_CameraMovement",
            "id": "1b70539e-8904-4292-bc88-5ff82cf90866",
            "actions": [
                {
                    "name": "CameraViewportMovement",
                    "type": "Value",
                    "id": "c4216423-47ec-403d-9c9e-f33f14b73f95",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "90db9537-4469-41fa-a7ff-be7169268b8c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9296853a-1e7a-4c51-8789-c190cdcc1f1c",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraViewportMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "e4c7f74f-7b73-435b-891e-badd62a79782",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3d8e87cd-3e6c-40b0-b15e-44348c36beae",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a07c30a6-9361-48e5-94db-083e96e0bc3b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "7db471be-17a9-4c10-ab8b-3cd86be67d4c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b114b7a8-8b6d-4f8d-b00d-a9b0f6cf217d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}